bk_ida/sjengida/g0/l_king_mobility
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/l_king_mobility/src/leval.c:562:12: error: use of undeclared identifier 'king_o_1'
if ( board[king_o_1[i] + square] == 13 ) 
           ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/l_king_mobility/src/obj/leval.o] Error 1
